force-app/main/default/objects/Bundle_Component__c/Bundle_Component__c.object-meta.xml
<CustomObject>
    <label>Bundle Component</label>
    <nameField>
        <label>Bundle Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>