force-app/main/default/objects/Bundle_Component__c/fields/Bundled_Product__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bundled Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Components (Bundled Product)</relationshipLabel>
    <relationshipName>Bundle_Components1</relationshipName>
    <type>Lookup</type>
</CustomField>