force-app/main/default/objects/Bundle_Component__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bundle Components</relationshipLabel>
    <relationshipName>Bundle_Components</relationshipName>
    <type>Lookup</type>
</CustomField>