force-app/main/default/objects/Bundle_Component__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <label>Parent Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>