force-app/main/default/objects/Bundle_Component__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Components</relationshipLabel>
    <relationshipName>Bundle_Components</relationshipName>
    <type>Lookup</type>
</CustomField>